# MultiThreaded-Object-Detection-and-Tracking

./: CMakeLists.txt  README.md
include/: Absolute.xml  PTZController.h  Utils.h  frame_grabber.h  frame_writer.h  point2D.h  tracking_msg.h
include/Detector/: yolov3v4_object_detector.h  yolov5_object_detector.h
include/Tracker/: object_tracker.h
src/: frame_grabber.cpp  frame_writer.cpp  kalman_track.cpp  main.cpp  object_tracker.cpp  tracker.cpp  yolov3v4_object_detector.cpp  yolov5_object_detector.cpp
